Correction of overflow Y scroller for CHat main page

--- a/frontend/mobile-styles/_main-page-chat.scss
+++ b/frontend/mobile-styles/_main-page-chat.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 3rem;
-  overflow-x: scroll;
+  overflow-y: scroll;
   .user {
     display: flex;
     align-items: center;
